# Osy

./: .gitignore
lab2/: Makefile  digits.cpp  digits.txt  scan  scan.cpp
message_queue/: CMakeLists.txt  main.cpp  msg_posix_test.cpp  msg_sysv_test.cpp  shm_posix_test.cpp
osy-project/: CMakeLists.txt  client.cpp  proc_server.cpp  thread_server.cpp
osy-project/lib/: Logger.h  Message.h  ProgramArgs.h  Protocol.h
priklady-fork/: CMakeLists.txt  main.c  ver1.c  ver2.c  ver_3.c
proc/: CMakeLists.txt  main.c
readline/: BufferedFileDescriptorReader.h  CMakeLists.txt  FileDescriptorReader.h  main.cpp
scan/: CMakeLists.txt  main.cpp
semaphore/: CMakeLists.txt  digits  lines.txt  main.cpp  readline.cpp  readline2.cpp  readlinetest.cpp  sem_posix_test.cpp
socket/: CMakeLists.txt  gen  lines.txt  readline.cpp  socket_cl.cpp
testexec/: CMakeLists.txt  check.cpp  file.txt  gen.cpp  main.cpp  sca  scan  scan.cpp  ver_1.cpp
threading_socket/: BufferedFileDescriptorReader.h  CMakeLists.txt  FileDescriptorReader.h  main.cpp  socket_cl.cpp  socket_srv.cpp
